<resources>
    <string name="app_name">Keep MMS</string>
    <string name="messages">Messages</string>
    <string name="kept_items">Kept Items</string>
    <string name="settings">Settings</string>
    <string name="title_activity_kept_items">KeptItems</string>
    <string name="write_a_message">Write a message</string>
    <string name="sendText">Send</string>
    <string name="auth_failed">Auth Failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="toPhoneNumber">To: </string>
    <string name="settingsLabelLinks">Links</string>
    <string name="settingsLabelKeepLinksIsend">Keep links I send</string>
    <string name="linksIsent">Links I Sent</string>
    <string name="linksSentToMe">Links Sent To Me</string>
</resources>
